[gd_scene load_steps=9 format=3 uid="uid://drksq5m7tmq72"]

[ext_resource type="Script" path="res://menus/options.gd" id="1_c7hcf"]
[ext_resource type="Theme" path="res://menus/title.tres" id="2_scg5o"]
[ext_resource type="Texture2D" uid="uid://cb7ot5abnye5n" path="res://art/background/Green.png" id="3_a2ywt"]
[ext_resource type="Texture2D" uid="uid://dccrqv2pfflgn" path="res://art/menu/buttons/Volume.png" id="4_o8rir"]
[ext_resource type="Texture2D" uid="uid://co4b3mdwc6tbg" path="res://art/menu/buttons/Volumemute.png" id="5_ag5h7"]
[ext_resource type="Texture2D" uid="uid://c52elq6oy8fjs" path="res://art/menu/buttons/Back.png" id="5_xvkda"]
[ext_resource type="Texture2D" uid="uid://danbbpqv8ose8" path="res://art/menu/buttons/Achievements.png" id="6_o4x2u"]
[ext_resource type="AudioStream" uid="uid://d0xiyyvgna8v0" path="res://sounds/menu_theme.mp3" id="7_dh7qb"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7hcf")

[node name="Title" type="RichTextLabel" parent="."]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -139.0
offset_right = 346.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_scg5o")
bbcode_enabled = true
text = "[center]OPTIONS[/center]"

[node name="Background" type="TextureRect" parent="."]
z_index = -1
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_a2ywt")
stretch_mode = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -15.0
offset_right = 220.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Sound" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Sound"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_o8rir")
stretch_mode = 5

[node name="Help" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Help"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ag5h7")
stretch_mode = 5

[node name="Keybind" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Keybind"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_o4x2u")
stretch_mode = 5

[node name="Back" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_xvkda")
stretch_mode = 5

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-130, -109)
stream = ExtResource("7_dh7qb")
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="Buttons/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="Buttons/Sound" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Buttons/Help" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Keybind" to="." method="_on_keybind_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_back_pressed"]
